--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,12 @@
 {
-  "client": "./client",
-  "svr": "./server",
-  "miniprogramRoot": "./client",
-  "qcloudRoot": "./server"
+	"client": "./client",
+	"svr": "./server",
+	"miniprogramRoot": "./client",
+	"qcloudRoot": "./server",
+	"setting": {
+		"newFeature": true
+	},
+	"appid": "wx6dfb8e33b3ca95ee",
+	"projectname": "match-maker-zhou-1.0",
+	"condition": {}
 }
