--- a/client/app.json
+++ b/client/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/settings/settings",
-    "pages/personList/personList"
+    "pages/personList/personList",
+    "pages/demo/demo"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -19,6 +20,10 @@
       {
         "pagePath": "pages/personList/personList",
         "text": "list"
+      },
+      {
+        "pagePath": "pages/demo/demo",
+        "text": "demo"
       }
     ]
   }
