--- a/client/app.json
+++ b/client/app.json
@@ -15,15 +15,15 @@
     "list": [
       {
         "pagePath": "pages/settings/settings",
-        "text": "settings"
+        "text": "我"
       },
       {
         "pagePath": "pages/personList/personList",
-        "text": "list"
+        "text": "他 | 她"
       },
       {
         "pagePath": "pages/demo/demo",
-        "text": "demo"
+        "text": "红娘"
       }
     ]
   }
